@@ -18,21 +18,22 @@
 
 package org.apache.giraph.edge;
 
-import com.google.common.collect.UnmodifiableIterator;
 import it.unimi.dsi.fastutil.doubles.DoubleArrayList;
 import it.unimi.dsi.fastutil.doubles.DoubleIterator;
 import it.unimi.dsi.fastutil.longs.LongArrayList;
 import it.unimi.dsi.fastutil.longs.LongIterator;
+
+import java.io.DataInput;
+import java.io.DataOutput;
+import java.io.IOException;
+import java.util.Iterator;
 
 import org.apache.giraph.utils.EdgeIterables;
 import org.apache.giraph.utils.Trimmable;
 import org.apache.hadoop.io.DoubleWritable;
 import org.apache.hadoop.io.LongWritable;
 
-import java.io.DataInput;
-import java.io.DataOutput;
-import java.io.IOException;
-import java.util.Iterator;
+import com.google.common.collect.UnmodifiableIterator;
 
 /**
  * Implementation of {@link OutEdges} with long ids and double edge
@@ -108,7 +109,7 @@ public class LongDoubleArrayEdges
     // Thanks to the constant-time implementation of removeAt(int),
     // we can remove all matching edges in linear time.
     for (int i = neighbors.size() - 1; i >= 0; --i) {
-      if (neighbors.get(i) == targetVertexId.get()) {
+      if (neighbors.getLong(i) == targetVertexId.get()) {
         removeAt(i);
       }
     }
@@ -124,11 +125,11 @@ public class LongDoubleArrayEdges
     // Returns an iterator that reuses objects.
     return new UnmodifiableIterator<Edge<LongWritable, DoubleWritable>>() {
       /** Wrapped neighbors iterator. */
-      private LongIterator neighborsIt = neighbors.iterator();
+      private final LongIterator neighborsIt = neighbors.iterator();
       /** Wrapped edge values iterator. */
-      private DoubleIterator edgeValuesIt = edgeValues.iterator();
+      private final DoubleIterator edgeValuesIt = edgeValues.iterator();
       /** Representative edge object. */
-      private Edge<LongWritable, DoubleWritable> representativeEdge =
+      private final Edge<LongWritable, DoubleWritable> representativeEdge =
           EdgeFactory.create(new LongWritable(), new DoubleWritable());
 
       @Override
@@ -163,8 +164,8 @@ public class LongDoubleArrayEdges
      */
     public void setIndex(int index) {
       // Update the id and value objects from the superclass.
-      getTargetVertexId().set(neighbors.get(index));
-      getValue().set(edgeValues.get(index));
+      getTargetVertexId().set(neighbors.getLong(index));
+      getValue().set(edgeValues.getDouble(index));
       // Update the index.
       this.index = index;
     }
@@ -185,7 +186,7 @@ public class LongDoubleArrayEdges
       /** Current position in the array. */
       private int offset = 0;
       /** Representative edge object. */
-      private LongDoubleArrayMutableEdge representativeEdge =
+      private final LongDoubleArrayMutableEdge representativeEdge =
           new LongDoubleArrayMutableEdge();
 
       @Override
