@@ -18,20 +18,21 @@
 
 package org.apache.giraph.edge;
 
-import com.google.common.collect.UnmodifiableIterator;
 import it.unimi.dsi.fastutil.longs.Long2DoubleMap;
 import it.unimi.dsi.fastutil.longs.Long2DoubleOpenHashMap;
 import it.unimi.dsi.fastutil.objects.ObjectIterator;
+
+import java.io.DataInput;
+import java.io.DataOutput;
+import java.io.IOException;
+import java.util.Iterator;
 
 import org.apache.giraph.utils.EdgeIterables;
 import org.apache.giraph.utils.Trimmable;
 import org.apache.hadoop.io.DoubleWritable;
 import org.apache.hadoop.io.LongWritable;
 
-import java.io.DataInput;
-import java.io.DataOutput;
-import java.io.IOException;
-import java.util.Iterator;
+import com.google.common.collect.UnmodifiableIterator;
 
 /**
  * {@link OutEdges} implementation with long ids and double edge values,
@@ -105,10 +106,11 @@ public class LongDoubleHashMapEdges
     // Returns an iterator that reuses objects.
     return new UnmodifiableIterator<Edge<LongWritable, DoubleWritable>>() {
       /** Wrapped map iterator. */
-      private ObjectIterator<Long2DoubleMap.Entry> mapIterator =
+      private final ObjectIterator<Long2DoubleMap.Entry> mapIterator =
           edgeMap.long2DoubleEntrySet().fastIterator();
       /** Representative edge object. */
-      private ReusableEdge<LongWritable, DoubleWritable> representativeEdge =
+      private final ReusableEdge<LongWritable, DoubleWritable>
+      representativeEdge =
           EdgeFactory.createReusable(new LongWritable(), new DoubleWritable());
 
       @Override
@@ -150,7 +152,7 @@ public class LongDoubleHashMapEdges
     public void setEntry(Long2DoubleMap.Entry entry) {
       // Update the id and value objects from the superclass.
       getTargetVertexId().set(entry.getLongKey());
-      getValue().set(entry.getValue());
+      getValue().set(entry.getDoubleValue());
       // Update the entry.
       this.entry = entry;
     }
@@ -172,10 +174,10 @@ public class LongDoubleHashMapEdges
        * Note: we cannot use the fast iterator in this case,
        * because we need to call setValue() on an entry.
        */
-      private ObjectIterator<Long2DoubleMap.Entry> mapIterator =
+      private final ObjectIterator<Long2DoubleMap.Entry> mapIterator =
           edgeMap.long2DoubleEntrySet().iterator();
       /** Representative edge object. */
-      private LongDoubleHashMapMutableEdge representativeEdge =
+      private final LongDoubleHashMapMutableEdge representativeEdge =
           new LongDoubleHashMapMutableEdge();
 
       @Override
